<resources>
    <string name="app_name">Legitnik</string>
    <string name="navigation_bar_parking">Parking</string>
    <string name="navigation_bar_settings">Settings</string>
    <string name="parking_lot_details_address">Address</string>
    <string name="parking_lot_details_free_places">Free parking spots</string>
    <string name="parking_lot_details_history">History</string>
    <string name="parking_lot_details_map">Map</string>
    <string name="parking_lot_details_navigate">Navigate</string>
    <string name="parking_lot_details_image_description">Parking image</string>
    <string name="parking_lot_details_error_message">Error occurred! Displayed data might be outdated</string>
    <string name="parking_lot_details_data_unavailable_message">Data about parking lot details is unavailable. Try again later</string>
    <string name="parking_lot_details_chart_data_unavailable_message">Free places history is currently unavailable. Try again</string>
    <string name="parking_lot_details_reload_icon_description">Reload</string>
    <string name="navigation_bar_sdcat_card_reader">Card Reader</string>
    <string name="sdcat_card_reader_interface_nfc">NFC</string>
    <string name="sdcat_card_reader_interface_usb">USB</string>
    <string name="sdcat_card_reader_interface_nfc_unavailable">NFC is unavailable on this device!</string>
    <string name="sdcat_card_reader_interface_usb_unavailable">USB is unavailable on this device!</string>
    <string name="sdcat_card_reader_interface_nfc_prompt">Tap a Student/Doctoral Candidate/Academic Teacher Card with your device to scan it…</string>
    <string name="sdcat_card_reader_interface_nfc_prompt_disclaimer">WARNING: Only some cards support reading data using NFC - others require using a USB reader</string>
    <string name="sdcat_card_reader_snackbar_nfc_unsupported_card">This card is not supported! If it\'s a Student/DC/AT card, try using a USB reader.</string>
    <string name="sdcat_card_reader_interface_usb_card_reader">USB Card Reader</string>
    <string name="sdcat_card_reader_interface_usb_device_select_prompt">Connect a USB card reader to your device and select it from the list above…</string>
    <string name="sdcat_card_reader_snackbar_usb_unsupported_device">The selected USB device is not a supported card reader! Please try using another reader.</string>
    <string name="sdcat_card_reader_interface_usb_insert_card_prompt">Insert a Student/Doctoral Candidate/Academic Teacher Card into the reader to scan it…</string>
    <string name="sdcat_card_reader_snackbar_reading_interface_error">An error occurred while trying to read data from this card! Please try scanning it again.</string>
    <string name="sdcat_card_reader_snackbar_reading_error">An error occurred while reading data from this card! Please make sure it\'s a Student/Doctoral Candidate/Academic Teacher Card.</string>
    <string name="sdcat_card_card_student">Student</string>
    <string name="sdcat_card_card_doctoral_candidate">Doctoral candidate</string>
    <string name="sdcat_card_card_academic_teacher">Academic teacher</string>
    <string name="sdcat_card_card_university">University</string>
    <string name="sdcat_card_card_university_or_issuer">University/issuer</string>
    <string name="sdcat_card_card_album_number">Album number</string>
    <string name="sdcat_card_card_card_number">Card number</string>
    <string name="sdcat_card_card_edition_number">Edition number</string>
    <string name="sdcat_card_card_pesel_number">PESEL number</string>
    <string name="sdcat_card_card_expiry_date">Expiry date</string>
    <string name="sdcat_card_card_issue_date">Issue date</string>
    <string name="parking_lot_list_error">An error occurred. Check your internet connection and try again later.</string>
    <string name="parking_lot_list_snack_error">An error occurred. Displayed data might be outdated.</string>
    <string name="parking_lot_list_refresh">Refresh</string>
    <plurals name="parking_lot_list_free_places">
        <item quantity="one">%d free place</item>
        <item quantity="other">%d free places</item>
    </plurals>
    <string name="sdcat_card_reader_snackbar_validation_error">An error occurred while validating card data! This might indicate an issue with the data saved on the card.</string>
    <string name="sdcat_card_card_validation_details_button">Validation details</string>
    <string name="sdcat_card_card_valid">Valid</string>
    <string name="sdcat_card_card_invalid">Invalid</string>
    <string name="sdcat_card_validation_details_dialog_title">Validation details</string>
    <string name="sdcat_card_validation_details_dialog_certificate_title">Qualified certificate</string>
    <string name="sdcat_card_validation_details_dialog_certificate_subject">Subject</string>
    <string name="sdcat_card_validation_details_dialog_certificate_issuer">Issuer</string>
    <string name="sdcat_card_validation_details_dialog_certificate_validity">Validity</string>
    <string name="sdcat_card_validation_details_dialog_valid_qualified_signature">Valid qualified signature</string>
    <string name="sdcat_card_validation_details_dialog_issuer_matches_certificate_subject_label">Card issuer matches certificate subject</string>
    <string name="sdcat_card_validation_details_dialog_certificate_subject_authorized_label">Subject authorized to issue cards</string>
    <string name="sdcat_card_validation_details_dialog_not_expired_label">Not expired</string>
    <string name="sdcat_card_validation_details_dialog_yes">Yes</string>
    <string name="sdcat_card_validation_details_dialog_no">No</string>
    <string name="sdcat_card_card_save_button_text">Save</string>
    <string name="sdcat_card_reader_snackbar_saving_error">An error occurred while saving card on the device.</string>
    <string name="sdcat_card_reader_snackbar_saving_success">Card was successfully saved on the device.</string>
    <string name="sdcat_card_reader_snackbar_saving_error_duplicate">Card is already saved on the device.</string>
    <string name="sdcat_card_card_remove_button_text">Remove</string>
    <string name="sdcat_card_reader_snackbar_removing_success">Card was successfully removed from device.</string>
    <string name="parking_lot_list_open_map">Open map</string>
    <string name="parking_lot_details_navigate_activity_not_found_exception">No maps app was found!</string>
    <string name="parking_lot_map_show_my_location">Show my location</string>
    <string name="sdcat_card_validation_details_signature_validation_title">Qualified signature validation</string>
    <string name="sdcat_card_validation_details_indication">Indication</string>
    <string name="sdcat_card_validation_details_sub_indication">Subindication</string>
    <string name="sdcat_card_validation_details_ades_errors">AdES errors</string>
    <string name="sdcat_card_validation_details_ades_warnings">AdES warnings</string>
    <string name="sdcat_card_validation_details_ades_infos">AdES infos</string>
    <string name="sdcat_card_validation_details_qualification_errors">Qualification errors</string>
    <string name="sdcat_card_validation_details_qualification_warnings">Qualification warnings</string>
    <string name="sdcat_card_validation_details_qualification_infos">Qualification infos</string>
    <string name="navigation_bar_sdcat_card_saved">Saved Cards</string>
    <string name="sdcat_card_saved_list_prompt_title">You haven\'t saved any cards yet!</string>
    <string name="sdcat_card_saved_list_prompt_subtitle">Save your first card using the reader.</string>
    <string name="settings_notification_category">Enable notifications of available parking spaces in selected parking lots</string>
    <string name="settings_ongoing_notification_category">Enable an ongoing notification that tracks the number of available parking spaces in selected parking lots</string>
    <string name="apdu_service_description">S/DC/AT Card Emulation</string>
    <string name="apdu_service_aid_group_description">S/DC/AT Card</string>
    <string name="sdcat_card_saved_details_not_found_prompt_title">We couldn\'t find that card!</string>
    <string name="sdcat_card_saved_details_not_found_prompt_subtitle">You may have removed it.</string>
    <string name="sdcat_card_saved_details_error_prompt_title">An error has occurred while loading the card!</string>
    <string name="sdcat_card_saved_details_validation_error_snackbar_message">An error occurred while validating card data!</string>
    <string name="sdcat_card_card_default">Default</string>
    <string name="sdcat_card_card_mark_as_default">Mark as default</string>
    <string name="sdcat_card_saved_details_active_for_emulation">Active for emulation</string>
    <string name="notification_helper_channel_free_places_changed_name">Parking lot free places changed</string>
    <string name="notification_helper_channel_free_places_non_zero_name">Parking lot free places became non zero</string>
    <string name="notification_helper_channel_free_places_changed_description">Ongoing notification displaying number of free places on parking lot</string>
    <string name="notification_helper_channel_free_places_non_zero_description">Notification informs about vacant places on parking lot</string>
    <string name="notification_helper_changed_notification_title">Free places on parking lots</string>
    <string name="notification_helper_non_zero_notification_title">Free places available on parking %1$s</string>
    <string name="notification_helper_non_zero_notification_text">Free places = %1$d</string>
</resources>
