package com.jakubmeysner.legitnik.util

object TestTags {
    const val PARKING_ITEM = "PARKING_ITEM"
    const val FREE_PLACES_CHART = "CHART"
    const val GOOGLE_MAP = "GOOGLE_MAP"
}
